--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(0,53,255,0.1843137254901961)',
-                interactive: true,
+                interactive: false,
             }
         }
         map.createPane('pane_TerritorialSeas12NauticalMiles_2');
@@ -142,7 +142,7 @@
         map.getPane('pane_TerritorialSeas12NauticalMiles_2').style['mix-blend-mode'] = 'normal';
         var layer_TerritorialSeas12NauticalMiles_2 = new L.geoJson(json_TerritorialSeas12NauticalMiles_2, {
             attribution: '',
-            interactive: true,
+            interactive: false,
             dataVar: 'json_TerritorialSeas12NauticalMiles_2',
             layerName: 'layer_TerritorialSeas12NauticalMiles_2',
             pane: 'pane_TerritorialSeas12NauticalMiles_2',
